primeira parte do site concluída.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="cabecalho">
-        <h1 class="titulo1">World Pears</h1>
+        <h1 class="titulo1">World Peas</h1>
         <nav class="navegacao">
             <li><a href="#">Shop</a></li>
             <li><a href="#">Newstand</a></li>
@@ -27,10 +27,34 @@
 
     <section class="section2">
         <div class="imagens">
-            <img class="img1" src="src/imagens/jonathan-kemper-1HHrdIoLFpU-unsplash 1.png" alt="">
-            <img class="img2" src="src/imagens/Stocksy_txp226f62b2aNe300_Medium_4582193 1.png" alt="">
+            <div class="img1">
+                <img src="src/imagens/jonathan-kemper-1HHrdIoLFpU-unsplash 1.png" alt="">
+            </div>
+
+            <div class="img2">
+                <img class="img2" src="src/imagens/Stocksy_txp226f62b2aNe300_Medium_4582193 1.png" alt="">
+                <p><strong>Central California</strong> — The person who grew these was located in Central California
+                    and, er, hopefully
+                    very well- <br> compensated.</p>
+            </div>
         </div>
-        <p>Central California — The person who grew these was located in Central California and, er, hopefully very well-compensated.</p>
+    </section>
+
+    <section class="section3">
+        <div class="paragrafos">
+            <p class="frasedestacada">WHAT WE BELIEVE</p>
+            <p>We believe in produce. Tasty produce. Produce like: </p>
+        </div>
+        <div class="paragrafos2">
+            <p> Apples. Oranges. Limes. Lemons. Guavas. Carrots. Cucumbers. Jicamas. Cauliflowers. <br> Brussels
+                sprouts. Shallots. Japanese eggplants. Asparagus. Artichokes—Jerusalem <br> artichokes, too. Radishes.
+                Broccoli. Baby broccoli. Broccolini. Bok choy. Scallions. <br> Ginger. Cherries. Raspberries. Cilantro.
+                Parsley. Dill. </p>
+            <p class="pergunta1">What are we forgetting?</p>
+            <p>
+                Oh! Onions. Yams. Avocados. Lettuce. Arugula (to some, “rocket”). Persian cucumbers, <br> in addition to aforementioned “normal” cucumbers. Artichokes. Zucchinis. Pumpkins. <br> Squash (what some cultures call pumpkins). Sweet potatoes and potato-potatoes. <br> Jackfruit. Monk fruit. Fruit of the Loom. Fruits of our labor (this website). Sorrel. <br> Pineapple. Mango. Gooseberries. Blackberries. Tomatoes. Heirloom tomatoes. Beets. <br> Chives. Corn. Endive. Escarole, which, we swear, we’re vendors of organic produce, <br> but if you asked us to describe what escaroles are...
+            </p>
+        </div>
     </section>
 </body>
 
