--- a/principal.html
+++ b/principal.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Projeto</title>
     <link rel="stylesheet" href="src/estilos.css">
+    <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -56,6 +58,10 @@
             </p>
         </div>
     </section>
-</body>
 
+    <footer class="rodape">
+        <p>Link para a segunda página<a href="bask.html" target="_blank">clique aqui!</a></p>
+    </footer>
+
+</body>
 </html>
